Feature extraction complete

--- a/script_analysis/data_analysis.ipynb
+++ b/script_analysis/data_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "ae2caaee",
    "metadata": {},
    "source": [
-    "# Analysing inconsistencites and data integrity after basic profiling"
+    "# Analysing inconsistencies and data integrity after basic profiling"
    ]
   },
   {
@@ -72,6 +72,29 @@
    ],
    "source": [
     "df_csv['LIFESTAGE'].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "71a21af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking duplicate entries\n",
+    "\n",
+    "df.duplicated().sum()"
    ]
   },
   {
@@ -887,11 +910,371 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34bcca6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>LYLTY_CARD_NBR</th>\n",
+       "      <th>TXN_ID</th>\n",
+       "      <th>PROD_NBR</th>\n",
+       "      <th>PROD_NAME</th>\n",
+       "      <th>PROD_QTY</th>\n",
+       "      <th>TOT_SALES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [DATE, STORE_NBR, LYLTY_CARD_NBR, TXN_ID, PROD_NBR, PROD_NAME, PROD_QTY, TOT_SALES]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking duplicate entries\n",
+    "\n",
+    "# chips_only_df[chips_only_df.duplicated(subset='TXN_ID')]\n",
+    "\n",
+    "chips_only_df[chips_only_df.duplicated()] # checking duplicate entry\n",
+    "\n",
+    "chips_only_df = chips_only_df.drop_duplicates() # removing duplicate\n",
+    "\n",
+    "chips_only_df[chips_only_df.duplicated()] # rechecking"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "25da27e3",
    "metadata": {},
    "source": [
-    "### Feature extraction"
+    "## Feature extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "804f4649",
+   "metadata": {},
+   "source": [
+    "### Pack size extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "014d9941",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PROD_NAME</th>\n",
+       "      <th>PACK_SIZE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Natural Chip        Compny SeaSalt175g</td>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CCs Nacho Cheese    175g</td>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Smiths Crinkle Cut  Chips Chicken 170g</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Smiths Chip Thinly  S/Cream&amp;Onion 175g</td>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kettle Tortilla ChpsHny&amp;Jlpno Chili 150g</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Smiths Crinkle Chips Salt &amp; Vinegar 330g</td>\n",
+       "      <td>330.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Grain Waves         Sweet Chilli 210g</td>\n",
+       "      <td>210.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Doritos Corn Chip Mexican Jalapeno 150g</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Grain Waves Sour    Cream&amp;Chives 210G</td>\n",
+       "      <td>210.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Smiths Crinkle Chips Salt &amp; Vinegar 330g</td>\n",
+       "      <td>330.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   PROD_NAME  PACK_SIZE\n",
+       "0     Natural Chip        Compny SeaSalt175g      175.0\n",
+       "1                   CCs Nacho Cheese    175g      175.0\n",
+       "2     Smiths Crinkle Cut  Chips Chicken 170g      170.0\n",
+       "3     Smiths Chip Thinly  S/Cream&Onion 175g      175.0\n",
+       "4   Kettle Tortilla ChpsHny&Jlpno Chili 150g      150.0\n",
+       "6   Smiths Crinkle Chips Salt & Vinegar 330g      330.0\n",
+       "7      Grain Waves         Sweet Chilli 210g      210.0\n",
+       "8    Doritos Corn Chip Mexican Jalapeno 150g      150.0\n",
+       "9      Grain Waves Sour    Cream&Chives 210G      210.0\n",
+       "10  Smiths Crinkle Chips Salt & Vinegar 330g      330.0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting pack size from PROD_NAME\n",
+    "\n",
+    "chips_only_df['PACK_SIZE'] = chips_only_df['PROD_NAME'].str.extract(r'(\\d+)\\s*[gG]\\b', expand=False).astype(float)\n",
+    "\n",
+    "chips_only_df[['PROD_NAME', 'PACK_SIZE']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "93b77435",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Infuzions Mango     Chutny Papadums 70g'], dtype=object)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Is the pack_size extraction without any errors?\n",
+    "\n",
+    "chips_only_df['PACK_SIZE'].describe()\n",
+    "\n",
+    "chips_only_df[chips_only_df['PACK_SIZE'] == 70.0]['PROD_NAME'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a752d6f0",
+   "metadata": {},
+   "source": [
+    "### Brand name extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d421c00e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Natural Chip        Compny SeaSalt175g\n",
+       "1                     CCs Nacho Cheese    175g\n",
+       "2       Smiths Crinkle Cut  Chips Chicken 170g\n",
+       "3       Smiths Chip Thinly  S/Cream&Onion 175g\n",
+       "4     Kettle Tortilla ChpsHny&Jlpno Chili 150g\n",
+       "6     Smiths Crinkle Chips Salt & Vinegar 330g\n",
+       "7        Grain Waves         Sweet Chilli 210g\n",
+       "8      Doritos Corn Chip Mexican Jalapeno 150g\n",
+       "9        Grain Waves Sour    Cream&Chives 210G\n",
+       "10    Smiths Crinkle Chips Salt & Vinegar 330g\n",
+       "11       Kettle Sensations   Siracha Lime 150g\n",
+       "12                    Twisties Cheese     270g\n",
+       "13            WW Crinkle Cut      Chicken 175g\n",
+       "14              Thins Chips Light&  Tangy 175g\n",
+       "15                           CCs Original 175g\n",
+       "Name: PROD_NAME, dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chips_only_df['PROD_NAME'].head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "619b0b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Natural', 'CCs', 'Smiths', 'Kettle', 'Grain', 'Doritos',\n",
+       "       'Twisties', 'WW', 'Thins', 'Burger', 'NCC', 'Cheezels', 'Infzns',\n",
+       "       'Red', 'Pringles', 'Dorito', 'Infuzions', 'Smith', 'GrnWves',\n",
+       "       'Tyrrells', 'Cobs', 'French', 'RRD', 'Tostitos', 'Cheetos',\n",
+       "       'Woolworths', 'Snbts', 'Sunbites'], dtype=object)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chips_only_df['BRAND'] = chips_only_df['PROD_NAME'].str.extract(r'^(.*?)\\s', expand=False)\n",
+    "\n",
+    "chips_only_df['BRAND'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "712442a4",
+   "metadata": {},
+   "source": [
+    "> Found repeated brand names under different spelling or abbreviations\n",
+    "> 1. WW, and Woolworths\n",
+    "> 2. RRD and Red\n",
+    "> 3. Sunbites and Snbts\n",
+    "> 4. Natural and NCC\n",
+    "> 5. Smiths and Smith\n",
+    "> 6. Dorito and Doritos\n",
+    "> 7. GrnWves and Grain\n",
+    "> 8. Infuzions and Infzns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "b0ed2c38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NCC', 'CCs', 'Smiths', 'Kettle', 'GrnWves', 'Doritos', 'Twisties',\n",
+       "       'Woolworths', 'Thins', 'Burger', 'Cheezels', 'Infuzions', 'RRD',\n",
+       "       'Pringles', 'Tyrrells', 'Cobs', 'French', 'Tostitos', 'Cheetos',\n",
+       "       'Sunbites'], dtype=object)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correcting brand names using dictionary\n",
+    "\n",
+    "brand_corrections = {\n",
+    "    'WW' : 'Woolworths',\n",
+    "    'Red' : 'RRD',\n",
+    "    'Snbts' : 'Sunbites',\n",
+    "    'Natural' : 'NCC',\n",
+    "    'Smith' : 'Smiths',\n",
+    "    'Dorito' : 'Doritos',\n",
+    "    'Grain' : 'GrnWves',\n",
+    "    'Infzns' : 'Infuzions'\n",
+    "}\n",
+    "\n",
+    "chips_only_df['BRAND'] = chips_only_df['BRAND'].map(brand_corrections).fillna(chips_only_df['BRAND'])\n",
+    "\n",
+    "chips_only_df['BRAND'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "26fcbb77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# final duplicate check\n",
+    "\n",
+    "chips_only_df.duplicated().sum()"
    ]
   }
  ],
