--- a/script_analysis/data_engineering.ipynb
+++ b/script_analysis/data_engineering.ipynb
@@ -13,12 +13,12 @@
    "id": "3ba6c437",
    "metadata": {},
    "source": [
-    "## Checking purchase behaviour dataset"
+    "## Checking Purchase Behaviour Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bce26b94",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "71a21af5",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
    "source": [
     "# checking duplicate entries\n",
     "\n",
-    "df.duplicated().sum()"
+    "df_csv.duplicated().sum()"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "id": "72fe9d14",
    "metadata": {},
    "source": [
-    "## Checking tansaction data dataset"
+    "## Checking Tansaction Data Dataset"
    ]
   },
   {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "012bc65e",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "1b427896",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "69763  Dorito Corn Chp     Supreme 380g       200      650.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "c9550ef2",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "69763  Dorito Corn Chp     Supreme 380g       200      650.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "3b469af4",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9ddb0360",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1219873e",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "005f172a",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "c9cb0c93",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "10  Smiths Crinkle Chips Salt & Vinegar 330g         1        5.7  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8b08be9d",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "[4680 rows x 8 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "34bcca6c",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
    "id": "25da27e3",
    "metadata": {},
    "source": [
-    "## Feature extraction"
+    "## Feature Extraction"
    ]
   },
   {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "014d9941",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1090,7 @@
        "10  Smiths Crinkle Chips Salt & Vinegar 330g      330.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "93b77435",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1115,7 @@
        "array(['Infuzions Mango     Chutny Papadums 70g'], dtype=object)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "id": "d421c00e",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1163,7 @@
        "Name: PROD_NAME, dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "id": "619b0b0a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
        "       'Woolworths', 'Snbts', 'Sunbites'], dtype=object)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "id": "b0ed2c38",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1230,7 @@
        "       'Sunbites'], dtype=object)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "id": "26fcbb77",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,6 +1275,96 @@
     "# final duplicate check\n",
     "\n",
     "chips_only_df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2108c25",
+   "metadata": {},
+   "source": [
+    "## Merging Purchasing Behaviour with Transaction Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "181106ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_df = df_csv.copy()\n",
+    "\n",
+    "final_data = pd.merge(chips_only_df, customer_df, how='left', on='LYLTY_CARD_NBR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1bcd827",
+   "metadata": {},
+   "source": [
+    "### Post merge audit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "679d1069",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data['LIFESTAGE'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0b171def",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data['PREMIUM_CUSTOMER'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10b6ac9d",
+   "metadata": {},
+   "source": [
+    "> Successfully completed LEFT JOIN operation.\n",
+    "\n",
+    "> All customers recorded in transactions exists in the customer dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "66d055b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_data.to_csv('../cleaned_data/cleaned_transactions.csv', index=False)"
    ]
   }
  ],
