Brand Analysis of Customer Preference Completed

--- a/script_analysis/data_exploratory_analysis.ipynb
+++ b/script_analysis/data_exploratory_analysis.ipynb
@@ -279,7 +279,7 @@
    "source": [
     "\n",
     "### Revenue Generation per Segment\n",
-    "> Q: Which brand brings the most revenue for the retail?"
+    "> Q: Which brand brings the most revenue for the retail for each segment?"
    ]
   },
   {
@@ -876,6 +876,209 @@
     "## Customer Preference\n",
     "> Q: Which brands do each segment buy the most of?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "97c8532c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGMENT_NAME</th>\n",
+       "      <th>BRAND</th>\n",
+       "      <th>PROD_QTY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>Kettle</td>\n",
+       "      <td>6492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>Smiths</td>\n",
+       "      <td>5422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>Doritos</td>\n",
+       "      <td>3953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>Pringles</td>\n",
+       "      <td>3865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>RRD</td>\n",
+       "      <td>3314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>Kettle</td>\n",
+       "      <td>6428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>Smiths</td>\n",
+       "      <td>4233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>Pringles</td>\n",
+       "      <td>3995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>Doritos</td>\n",
+       "      <td>3974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>Thins</td>\n",
+       "      <td>2279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>309</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>Kettle</td>\n",
+       "      <td>5328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>Smiths</td>\n",
+       "      <td>4322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>Doritos</td>\n",
+       "      <td>3442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>Pringles</td>\n",
+       "      <td>3261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>RRD</td>\n",
+       "      <td>2627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>Kettle</td>\n",
+       "      <td>7172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>Doritos</td>\n",
+       "      <td>4447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>Pringles</td>\n",
+       "      <td>4326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>Smiths</td>\n",
+       "      <td>3361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>Infuzions</td>\n",
+       "      <td>2343</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           SEGMENT_NAME      BRAND  PROD_QTY\n",
+       "129             OLDER FAMILIES - Budget     Kettle      6492\n",
+       "133             OLDER FAMILIES - Budget     Smiths      5422\n",
+       "125             OLDER FAMILIES - Budget    Doritos      3953\n",
+       "131             OLDER FAMILIES - Budget   Pringles      3865\n",
+       "132             OLDER FAMILIES - Budget        RRD      3314\n",
+       "269               RETIREES - Mainstream     Kettle      6428\n",
+       "273               RETIREES - Mainstream     Smiths      4233\n",
+       "271               RETIREES - Mainstream   Pringles      3995\n",
+       "265               RETIREES - Mainstream    Doritos      3974\n",
+       "275               RETIREES - Mainstream      Thins      2279\n",
+       "309             YOUNG FAMILIES - Budget     Kettle      5328\n",
+       "313             YOUNG FAMILIES - Budget     Smiths      4322\n",
+       "305             YOUNG FAMILIES - Budget    Doritos      3442\n",
+       "311             YOUNG FAMILIES - Budget   Pringles      3261\n",
+       "312             YOUNG FAMILIES - Budget        RRD      2627\n",
+       "389  YOUNG SINGLES/COUPLES - Mainstream     Kettle      7172\n",
+       "385  YOUNG SINGLES/COUPLES - Mainstream    Doritos      4447\n",
+       "391  YOUNG SINGLES/COUPLES - Mainstream   Pringles      4326\n",
+       "393  YOUNG SINGLES/COUPLES - Mainstream     Smiths      3361\n",
+       "388  YOUNG SINGLES/COUPLES - Mainstream  Infuzions      2343"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brand_volume = df.groupby(['SEGMENT_NAME', 'BRAND'])['PROD_QTY'].sum().reset_index()\n",
+    "brand_volume_high_value = brand_volume[brand_volume['SEGMENT_NAME'].isin(high_value_segments)]\n",
+    "\n",
+    "brand_volume_high_value = brand_volume_high_value.sort_values(['SEGMENT_NAME','PROD_QTY'], ascending=[True, False])\n",
+    "most_bought_brand_each_segment = brand_volume_high_value.groupby('SEGMENT_NAME').head(5)\n",
+    "most_bought_brand_each_segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16f6087d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
