Pack size preference analysis complete for both quantity sold and total sales

--- a/script_analysis/data_exploratory_analysis.ipynb
+++ b/script_analysis/data_exploratory_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "43b2b1ee",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "1bc6c115",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "852fcc7d",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "14                 3.930269           3.183036  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "a40b8f01",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "9  MIDAGE SINGLES/COUPLES - Budget     Kettle     6736.2"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9fb58a7c",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "2c2e2423",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
        "[80 rows x 3 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3ae9242d",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
        "388  YOUNG SINGLES/COUPLES - Mainstream  Infuzions    8749.40"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "97c8532c",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
        "388  YOUNG SINGLES/COUPLES - Mainstream  Infuzions      2343"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,19 +1073,455 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16f6087d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "011a0ad1",
    "metadata": {},
    "source": [
     "## Pack size preferences by segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dac6352e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>STORE_NBR</th>\n",
+       "      <th>LYLTY_CARD_NBR</th>\n",
+       "      <th>TXN_ID</th>\n",
+       "      <th>PROD_NBR</th>\n",
+       "      <th>PROD_NAME</th>\n",
+       "      <th>PROD_QTY</th>\n",
+       "      <th>TOT_SALES</th>\n",
+       "      <th>PACK_SIZE</th>\n",
+       "      <th>BRAND</th>\n",
+       "      <th>LIFESTAGE</th>\n",
+       "      <th>PREMIUM_CUSTOMER</th>\n",
+       "      <th>SEGMENT_NAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-10-17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Natural Chip        Compny SeaSalt175g</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>NCC</td>\n",
+       "      <td>YOUNG SINGLES/COUPLES</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Premium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-05-14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>348</td>\n",
+       "      <td>66</td>\n",
+       "      <td>CCs Nacho Cheese    175g</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>CCs</td>\n",
+       "      <td>MIDAGE SINGLES/COUPLES</td>\n",
+       "      <td>Budget</td>\n",
+       "      <td>MIDAGE SINGLES/COUPLES - Budget</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-05-20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1343</td>\n",
+       "      <td>383</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Smiths Crinkle Cut  Chips Chicken 170g</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>Smiths</td>\n",
+       "      <td>MIDAGE SINGLES/COUPLES</td>\n",
+       "      <td>Budget</td>\n",
+       "      <td>MIDAGE SINGLES/COUPLES - Budget</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE  STORE_NBR  LYLTY_CARD_NBR  TXN_ID  PROD_NBR  \\\n",
+       "0  2018-10-17          1            1000       1         5   \n",
+       "1  2019-05-14          1            1307     348        66   \n",
+       "2  2019-05-20          1            1343     383        61   \n",
+       "\n",
+       "                                PROD_NAME  PROD_QTY  TOT_SALES  PACK_SIZE  \\\n",
+       "0  Natural Chip        Compny SeaSalt175g         2        6.0      175.0   \n",
+       "1                CCs Nacho Cheese    175g         3        6.3      175.0   \n",
+       "2  Smiths Crinkle Cut  Chips Chicken 170g         2        2.9      170.0   \n",
+       "\n",
+       "    BRAND               LIFESTAGE PREMIUM_CUSTOMER  \\\n",
+       "0     NCC   YOUNG SINGLES/COUPLES          Premium   \n",
+       "1     CCs  MIDAGE SINGLES/COUPLES           Budget   \n",
+       "2  Smiths  MIDAGE SINGLES/COUPLES           Budget   \n",
+       "\n",
+       "                      SEGMENT_NAME  \n",
+       "0  YOUNG SINGLES/COUPLES - Premium  \n",
+       "1  MIDAGE SINGLES/COUPLES - Budget  \n",
+       "2  MIDAGE SINGLES/COUPLES - Budget  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1bfb7bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pack_analysis = df.groupby(['SEGMENT_NAME', 'PACK_SIZE']).agg(\n",
+    "    TOTAL_SALES = ('TOT_SALES', 'sum'),\n",
+    "    TOTAL_VOLUME = ('PROD_QTY', 'sum')   \n",
+    ").reset_index()\n",
+    "\n",
+    "pack_pref = pack_analysis[pack_analysis['SEGMENT_NAME'].isin(high_value_segments)]\n",
+    "\n",
+    "# Pack size preferences by volume\n",
+    "pack_pref_vol = pack_pref.sort_values(['SEGMENT_NAME', 'TOTAL_VOLUME'], ascending=[True,False])\n",
+    "top_pack_by_vol = pack_pref_vol.groupby('SEGMENT_NAME').head(3)\n",
+    "\n",
+    "\n",
+    "# Pack size preferences by total sales\n",
+    "pack_pref_sales = pack_pref.sort_values(['SEGMENT_NAME', 'TOTAL_SALES'], ascending=[True,False])\n",
+    "top_pack_by_sales = pack_pref_sales.groupby('SEGMENT_NAME').head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1042e207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGMENT_NAME</th>\n",
+       "      <th>PACK_SIZE</th>\n",
+       "      <th>TOTAL_SALES</th>\n",
+       "      <th>TOTAL_VOLUME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>42204.7</td>\n",
+       "      <td>11322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>24733.9</td>\n",
+       "      <td>6680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>14300.5</td>\n",
+       "      <td>3865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>38242.7</td>\n",
+       "      <td>9967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>23188.9</td>\n",
+       "      <td>6006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>14781.5</td>\n",
+       "      <td>3995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>35634.8</td>\n",
+       "      <td>9528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>19942.6</td>\n",
+       "      <td>5348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>12065.7</td>\n",
+       "      <td>3261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>37967.9</td>\n",
+       "      <td>9237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>22608.2</td>\n",
+       "      <td>5579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>16006.2</td>\n",
+       "      <td>4326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           SEGMENT_NAME  PACK_SIZE  TOTAL_SALES  TOTAL_VOLUME\n",
+       "130             OLDER FAMILIES - Budget      175.0      42204.7         11322\n",
+       "126             OLDER FAMILIES - Budget      150.0      24733.9          6680\n",
+       "124             OLDER FAMILIES - Budget      134.0      14300.5          3865\n",
+       "270               RETIREES - Mainstream      175.0      38242.7          9967\n",
+       "266               RETIREES - Mainstream      150.0      23188.9          6006\n",
+       "264               RETIREES - Mainstream      134.0      14781.5          3995\n",
+       "310             YOUNG FAMILIES - Budget      175.0      35634.8          9528\n",
+       "306             YOUNG FAMILIES - Budget      150.0      19942.6          5348\n",
+       "304             YOUNG FAMILIES - Budget      134.0      12065.7          3261\n",
+       "390  YOUNG SINGLES/COUPLES - Mainstream      175.0      37967.9          9237\n",
+       "386  YOUNG SINGLES/COUPLES - Mainstream      150.0      22608.2          5579\n",
+       "384  YOUNG SINGLES/COUPLES - Mainstream      134.0      16006.2          4326"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_pack_by_sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "69d165d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGMENT_NAME</th>\n",
+       "      <th>PACK_SIZE</th>\n",
+       "      <th>TOTAL_SALES</th>\n",
+       "      <th>TOTAL_VOLUME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>42204.7</td>\n",
+       "      <td>11322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>24733.9</td>\n",
+       "      <td>6680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>OLDER FAMILIES - Budget</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>14300.5</td>\n",
+       "      <td>3865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>38242.7</td>\n",
+       "      <td>9967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>23188.9</td>\n",
+       "      <td>6006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>RETIREES - Mainstream</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>14781.5</td>\n",
+       "      <td>3995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>35634.8</td>\n",
+       "      <td>9528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>19942.6</td>\n",
+       "      <td>5348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>YOUNG FAMILIES - Budget</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>12065.7</td>\n",
+       "      <td>3261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>37967.9</td>\n",
+       "      <td>9237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>22608.2</td>\n",
+       "      <td>5579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>YOUNG SINGLES/COUPLES - Mainstream</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>16006.2</td>\n",
+       "      <td>4326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           SEGMENT_NAME  PACK_SIZE  TOTAL_SALES  TOTAL_VOLUME\n",
+       "130             OLDER FAMILIES - Budget      175.0      42204.7         11322\n",
+       "126             OLDER FAMILIES - Budget      150.0      24733.9          6680\n",
+       "124             OLDER FAMILIES - Budget      134.0      14300.5          3865\n",
+       "270               RETIREES - Mainstream      175.0      38242.7          9967\n",
+       "266               RETIREES - Mainstream      150.0      23188.9          6006\n",
+       "264               RETIREES - Mainstream      134.0      14781.5          3995\n",
+       "310             YOUNG FAMILIES - Budget      175.0      35634.8          9528\n",
+       "306             YOUNG FAMILIES - Budget      150.0      19942.6          5348\n",
+       "304             YOUNG FAMILIES - Budget      134.0      12065.7          3261\n",
+       "390  YOUNG SINGLES/COUPLES - Mainstream      175.0      37967.9          9237\n",
+       "386  YOUNG SINGLES/COUPLES - Mainstream      150.0      22608.2          5579\n",
+       "384  YOUNG SINGLES/COUPLES - Mainstream      134.0      16006.2          4326"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_pack_by_vol"
    ]
   }
  ],
